--- a/ProjectExpenseControl/Views/Shared/_Layout.cshtml
+++ b/ProjectExpenseControl/Views/Shared/_Layout.cshtml
@@ -32,8 +32,9 @@
         </footer>
     </div>
 
-    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/jqwidgets")
     @RenderSection("scripts", required: false)
 </body>
