--- a/ProjectExpenseControl/Views/Account/Index.cshtml
+++ b/ProjectExpenseControl/Views/Account/Index.cshtml
@@ -3,5 +3,8 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Hello World</h2>
+<h2>Bienvenido @ViewBag.nameUser</h2>
+<h3>Id: @ViewBag.idUser</h3>
+<h3>Role: @ViewBag.roleUser</h3>
+
 
