--- a/ProjectExpenseControl/Views/Account/Registration.cshtml
+++ b/ProjectExpenseControl/Views/Account/Registration.cshtml
@@ -1,17 +1,15 @@
 ﻿@model ProjectExpenseControl.Models.RegistrationView
 
 @{
-    ViewBag.Title = "Registration";
+    ViewBag.Title = "Registro de Usuario";
 }
-
-<h2>Registration</h2>
 
 @if (ViewBag.Status != null && Convert.ToBoolean(ViewBag.Status))
 {
     if (ViewBag.Message != null)
     {
         <div class="alert alert-success">
-            <strong>Success!</strong> @ViewBag.Message
+            <strong>Registro Exitoso!</strong> @ViewBag.Message
         </div>
     }
 }
@@ -22,7 +20,6 @@ else
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <h4>RegistrationView</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
@@ -61,10 +58,10 @@ else
             <div class="form-group">
                 @Html.LabelFor(model => model.Area, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                   @* @Html.DropDownList("ARE_DES_NAME", "Seleccione el Área")*@
-                    
-                    @*@Html.DropDownListFor(model=>model.Area,(IEnumerable<SelectListItem>)ViewBag.Areas, new { htmlAttribute = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Area, "", new { @class = "text-danger" })*@
+                    @*@Html.DropDownList("ARE_DES_NAME", "Seleccione el Área")*@
+                    @Html.DropDownList("Area", new SelectList(ViewBag.listaAreas, "ARE_IDE_AREA", "ARE_DES_NAME"),"--Seleccione un Área--", new { @class = "form-control" })
+                    @*@Html.DropDownListFor(model=>model.Area,(IEnumerable<SelectListItem>)ViewBag.Areas, new { htmlAttribute = new { @class = "form-control" } })*@
+                    @Html.ValidationMessageFor(model => model.Area, "", new { @class = "text-danger" })
                 </div>
             </div>
 
@@ -102,7 +99,7 @@ else
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                    <input type="submit" value="CREAR" class="btn btn-default" />
                 </div>
             </div>
         </div>
