--- a/ProjectExpenseControl/Views/AccountingAccounts/Index.cshtml
+++ b/ProjectExpenseControl/Views/AccountingAccounts/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Catalogo de Cuentas Contables</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
