--- a/ProjectExpenseControl/Views/Shared/_Layout.cshtml
+++ b/ProjectExpenseControl/Views/Shared/_Layout.cshtml
@@ -49,6 +49,7 @@
                 </form>
                 <ul class="nav navbar-nav navbar-right">
                     <li>@Html.ActionLink("Iniciar sesión", "Index", "Account")</li>
+                    <li>@Html.ActionLink("Cerrar sesión", "Logout", "Account")</li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                         <ul class="dropdown-menu">
