--- a/ProjectExpenseControl/Views/Areas/Details.cshtml
+++ b/ProjectExpenseControl/Views/Areas/Details.cshtml
@@ -9,13 +9,39 @@
 <div>
     <h4>Area</h4>
     <hr />
+
     <dl class="dl-horizontal">
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ARE_IDE_AREA)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ARE_IDE_AREA)
+        </dd>
+
+    </dl>
+
+    <dl class="dl-horizontal">
+
         <dt>
             @Html.DisplayNameFor(model => model.ARE_DES_NAME)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.ARE_DES_NAME)
+        </dd>
+
+    </dl>
+
+    <dl class="dl-horizontal">
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ARE_FH_CREATED)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ARE_FH_CREATED)
         </dd>
 
     </dl>
