--- a/ProjectExpenseControl/Views/Areas/Edit.cshtml
+++ b/ProjectExpenseControl/Views/Areas/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProjectExpenseControl.DataAccess.Role
+﻿@model ProjectExpenseControl.Models.Area
 
 @{
     ViewBag.Title = "Edit";
@@ -12,16 +12,16 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Role</h4>
+        <h4>Area</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.TUSR_IDE_RESOURCE)
+        @Html.HiddenFor(model => model.ARE_IDE_AREA)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.TUSR_DES_TYPE, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ARE_DES_NAME, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TUSR_DES_TYPE, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TUSR_DES_TYPE, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.ARE_DES_NAME, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ARE_DES_NAME, "", new { @class = "text-danger" })
             </div>
         </div>
 
