--- a/ProjectExpenseControl/Views/Shared/_Layout.cshtml
+++ b/ProjectExpenseControl/Views/Shared/_Layout.cshtml
@@ -18,25 +18,24 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Facturación NET", "Index", "Areas", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Facturación NET", "Index", "Account", new { area = "" }, new { @class = "navbar-brand" })
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("link Areas", "Index", "Areas")</li>
-                    
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Catálogos<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Facturas", "Index", "Invoices")</li>
-                            <li>@Html.ActionLink("Usuarios", "Index", "User")</li>
-                            <li>@Html.ActionLink("Roles", "Index", "Roles")</li>
                             <li>@Html.ActionLink("Cuentas de mayor", "Index", "AccountingAccounts")</li>
-                            <li>@Html.ActionLink("Solicitudes", "Index", "Requests")</li>
-                            <li>@Html.ActionLink("Presupuestos", "Index", "Budgets")</li>
                             <li>@Html.ActionLink("Areas", "Index", "Areas")</li>
+                            <li>@Html.ActionLink("Presupuestos", "Index", "Budgets")</li>
+                            <li>@Html.ActionLink("Facturas", "Index", "Invoices")</li>
+                            <li>@Html.ActionLink("Solicitudes", "Index", "Requests")</li>
+                            <li>@Html.ActionLink("Roles", "Index", "Roles")</li>
                             <li>@Html.ActionLink("Estados de aprovación", "Index", "StatusAprovs")</li>
+                            <li>@Html.ActionLink("Usuarios", "Index", "User")</li>
+                            <li>@Html.ActionLink("Permisos a usuarios**", "Index", "UserRoles")</li>
                             <li role="separator" class="divider"></li>
                         </ul>
                     </li>
@@ -48,18 +47,7 @@
                     <button type="submit" class="btn btn-default">Submit</button>
                 </form>
                 <ul class="nav navbar-nav navbar-right">
-                    <li>@Html.ActionLink("Iniciar sesión", "Index", "Account")</li>
                     <li>@Html.ActionLink("Cerrar sesión", "Logout", "Account")</li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                        </ul>
-                    </li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
