--- a/ProjectExpenseControl/Views/Budgets/Index.cshtml
+++ b/ProjectExpenseControl/Views/Budgets/Index.cshtml
@@ -7,18 +7,13 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Crear Solicitud", "Create")
 </p>
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.BUD_IDE_USER)
-        </th>
+
         <th>
             @Html.DisplayNameFor(model => model.BUD_IDE_ACCOUNT)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.BUD_IDE_AREA)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.BUD_DES_QUANTITY)
@@ -32,16 +27,12 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
+@foreach (var item in Model)
+{
     <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.BUD_IDE_USER)
-        </td>
+
         <td>
             @Html.DisplayFor(modelItem => item.BUD_IDE_ACCOUNT)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.BUD_IDE_AREA)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.BUD_DES_QUANTITY)
@@ -53,9 +44,8 @@
             @Html.DisplayFor(modelItem => item.BUD_FH_CREATED)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.BUD_IDE_BUDGET }) |
-            @Html.ActionLink("Details", "Details", new { id=item.BUD_IDE_BUDGET }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.BUD_IDE_BUDGET })
+            @Html.ActionLink("Edit", "Edit", new { id = item.BUD_IDE_BUDGET }) |
+            @Html.ActionLink("Details", "Details", new { id = item.BUD_IDE_BUDGET }) 
         </td>
     </tr>
 }
