--- a/ProjectExpenseControl/Views/Budgets/Create.cshtml
+++ b/ProjectExpenseControl/Views/Budgets/Create.cshtml
@@ -15,18 +15,11 @@
         <h4>Budget</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.BUD_IDE_USER, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.BUD_IDE_USER, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.BUD_IDE_USER, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.BUD_IDE_ACCOUNT, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.BUD_IDE_ACCOUNT, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("BUD_IDE_ACCOUNT", new SelectList(ViewBag.listaCuentas, "ACC_IDE_ACCOUNT", "ACC_DES_ACCOUNT"), "--Seleccione un Área--", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.BUD_IDE_ACCOUNT, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -34,7 +27,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.BUD_IDE_AREA, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.BUD_IDE_AREA, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("BUD_IDE_AREA", new SelectList(ViewBag.listaAreas, "ARE_IDE_AREA", "ARE_DES_NAME"), "--Seleccione un Área--", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.BUD_IDE_AREA, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -52,14 +45,6 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.BUD_DES_PERIOD, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.BUD_DES_PERIOD, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.BUD_FH_CREATED, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.BUD_FH_CREATED, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.BUD_FH_CREATED, "", new { @class = "text-danger" })
             </div>
         </div>
 
